--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,7 @@
         .logo {
             font-size: 1.8rem;
             font-weight: 700;
-            color: #2563eb;
+            color: white;
             text-decoration: none;
         }
         
