--- a/profile.html
+++ b/profile.html
@@ -351,7 +351,7 @@
                 </div>
                 
                 <ul class="nav-menu">
-                    <li><a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a></li>
+                    <li><a href="clientpage.html"><i class="fas fa-home"></i> Dashboard</a></li>
                     <li><a href="profile.html" class="active"><i class="fas fa-user"></i> My Profile</a></li>
                     <li><a href="applications.html"><i class="fas fa-file-alt"></i> Applications</a></li>
                     <li><a href="saved-internships.html"><i class="fas fa-bookmark"></i> Saved Internships</a></li>
@@ -505,42 +505,9 @@
     
     <!-- Footer (Same as Index) -->
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-column">
-                    <h3>InternshipCenter</h3>
-                    <p>Connecting students with top companies to launch careers.</p>
-                </div>
-                <div class="footer-column">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="all-internships.html">Internships</a></li>
-                        <li><a href="companies.html">Companies</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>For Employers</h3>
-                    <ul>
-                        <li><a href="post-internship.html">Post Internship</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
-                        <li><a href="employer-dashboard.html">Employer Dashboard</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
+             <div class="footer-bottom">
                 <p>&copy; 2023 InternshipCenter. All rights reserved.</p>
             </div>
-        </div>
     </footer>
 
     <script>
